test: update test infrastructure and all tests for Spring Security