@@ -1,23 +1,19 @@
 package com.rolliedev.ticketflow.unit.http.rest;
 
-import com.rolliedev.ticketflow.dto.ActorCommand;
+import com.rolliedev.ticketflow.config.SecurityConfiguration;
 import com.rolliedev.ticketflow.dto.AssignTicketRequest;
+import com.rolliedev.ticketflow.dto.ChangePriorityRequest;
 import com.rolliedev.ticketflow.dto.CreateTicketRequest;
 import com.rolliedev.ticketflow.dto.TicketEventResponse;
 import com.rolliedev.ticketflow.dto.TicketResponse;
-import com.rolliedev.ticketflow.dto.UserSummary;
-import com.rolliedev.ticketflow.entity.enums.TicketEventType;
+import com.rolliedev.ticketflow.entity.UserEntity;
+import com.rolliedev.ticketflow.entity.enums.Role;
 import com.rolliedev.ticketflow.entity.enums.TicketPriority;
-import com.rolliedev.ticketflow.entity.enums.TicketStatus;
-import com.rolliedev.ticketflow.exception.InvalidStatusTransitionException;
-import com.rolliedev.ticketflow.exception.ResourceNotFoundException;
-import com.rolliedev.ticketflow.exception.TicketFlowAccessDeniedException;
-import com.rolliedev.ticketflow.http.handler.RestControllerExceptionHandler;
 import com.rolliedev.ticketflow.http.rest.TicketRestController;
+import com.rolliedev.ticketflow.security.TicketFlowUserDetails;
 import com.rolliedev.ticketflow.service.TicketEventService;
 import com.rolliedev.ticketflow.service.TicketService;
-import org.apache.commons.lang3.StringUtils;
-import org.hamcrest.Matchers;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
@@ -25,33 +21,31 @@ import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import tools.jackson.databind.ObjectMapper;
 
-import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
-import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(TicketRestController.class)
-@Import(RestControllerExceptionHandler.class)
-class TicketRestControllerTest {
+@Import(SecurityConfiguration.class)
+public class TicketRestControllerTest {
 
     private static final Long TICKET_ID = 1L;
     private static final Integer ADMIN_ID = 1;
@@ -60,215 +54,287 @@ class TicketRestControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-
     @Autowired
     private ObjectMapper objectMapper;
 
     @MockitoBean
     private TicketService ticketService;
-
     @MockitoBean
     private TicketEventService eventService;
 
-    @Test
-    void shouldFindByTicketId() throws Exception {
-        doReturn(Optional.of(ticketResponse())).when(ticketService).findById(TICKET_ID);
+    private TicketFlowUserDetails adminDetails;
+    private TicketFlowUserDetails agentDetails;
+    private TicketFlowUserDetails customerDetails;
 
-        mockMvc.perform(get("/api/v1/tickets/{id}", TICKET_ID))
+    @BeforeEach
+    void setUp() {
+        adminDetails = mockUserDetails(ADMIN_ID, Role.ADMIN);
+        agentDetails = mockUserDetails(AGENT_ID, Role.AGENT);
+        customerDetails = mockUserDetails(CUSTOMER_ID, Role.CUSTOMER);
+    }
+
+    @Test
+    void shouldReturnTicketWhenTicketExists() throws Exception {
+        TicketResponse ticket = mockTicketResponse(TICKET_ID);
+
+        doReturn(Optional.of(ticket)).when(ticketService).findById(eq(TICKET_ID), any());
+
+        mockMvc.perform(get("/api/v1/tickets/{id}", TICKET_ID)
+                        .with(user(adminDetails)))
                 .andExpectAll(
                         status().isOk(),
-                        jsonPath("$.id").value(TICKET_ID),
-                        jsonPath("$.title").value("Cannot log in"),
-                        jsonPath("$.description").value("Getting error when logging in with Google"),
-                        jsonPath("$.status").value("IN_PROGRESS"),
-                        jsonPath("$.priority").value("HIGH")
+                        jsonPath("$.id").value(TICKET_ID)
                 );
-
-        verify(ticketService).findById(TICKET_ID);
     }
 
     @Test
     void shouldReturnNotFoundWhenTicketDoesNotExist() throws Exception {
-        doReturn(Optional.empty()).when(ticketService).findById(TICKET_ID);
+        doReturn(Optional.empty()).when(ticketService).findById(eq(TICKET_ID), any());
 
-        mockMvc.perform(get("/api/v1/tickets/{id}", TICKET_ID))
-                .andExpectAll(
-                        status().isNotFound(),
-                        jsonPath("$.message").value(ResourceNotFoundException.ticket(TICKET_ID).getMessage())
-                );
-
-        verify(ticketService).findById(TICKET_ID);
+        mockMvc.perform(get("/api/v1/tickets/{id}", TICKET_ID)
+                        .with(user(adminDetails)))
+                .andExpect(status().isNotFound());
     }
 
     @Test
-    void shouldFindAllTickets() throws Exception {
-        Page<TicketResponse> page = new PageImpl<>(List.of(ticketResponse()), PageRequest.of(0, 10), 1);
-        doReturn(page).when(ticketService).findAll(any(), any());
+    void shouldReturnUnauthorizedWhenUserIsNotAuthenticated() throws Exception {
+        mockMvc.perform(get("/api/v1/tickets/{id}", TICKET_ID))
+                .andExpect(status().isUnauthorized());
+    }
+
+    @Test
+    void shouldReturnPagedTicketsWhenTicketsExist() throws Exception {
+        TicketResponse ticket = mockTicketResponse(TICKET_ID);
+        Page<TicketResponse> page = new PageImpl<>(List.of(ticket), PageRequest.of(0, 10), 1);
+
+        doReturn(page).when(ticketService).findAll(any(), any(), any());
 
         mockMvc.perform(get("/api/v1/tickets")
+                        .with(user(adminDetails))
                         .param("page", "0")
                         .param("size", "10"))
                 .andExpectAll(
                         status().isOk(),
-                        jsonPath("$.content").value(hasSize(1)),
-                        jsonPath("$.content[0].id").value(TICKET_ID),
-                        jsonPath("$.content[0].title").value("Cannot log in")
+                        jsonPath("$.content").isArray(),
+                        jsonPath("$.content.length()").value(1),
+                        jsonPath("$.metadata.totalElements").value(1)
                 );
-
-        verify(ticketService).findAll(any(), any());
     }
 
     @Test
-    void shouldGetTimeline() throws Exception {
-        Page<TicketEventResponse> page = new PageImpl<>(List.of(ticketEventResponse()), PageRequest.of(0, 10), 1);
-        doReturn(page).when(eventService).getTimeline(eq(TICKET_ID), any(Pageable.class));
+    void shouldReturnEmptyPageWhenNoTicketsExist() throws Exception {
+        Page<TicketResponse> emptyPage = new PageImpl<>(Collections.emptyList(), PageRequest.of(0, 10), 0);
+
+        doReturn(emptyPage).when(ticketService).findAll(any(), any(), any());
+
+        mockMvc.perform(get("/api/v1/tickets")
+                        .with(user(adminDetails)))
+                .andExpectAll(
+                        status().isOk(),
+                        jsonPath("$.content").isEmpty(),
+                        jsonPath("$.metadata.totalElements").value(0)
+                );
+    }
+
+    @Test
+    void shouldReturnPagedTicketEventsOfGivenTicket() throws Exception {
+        Page<TicketEventResponse> eventsPage = new PageImpl<>(
+                List.of(mock(TicketEventResponse.class)),
+                PageRequest.of(0, 20), 1);
+
+        doReturn(Optional.of(mock(TicketResponse.class))).when(ticketService).findById(eq(TICKET_ID), any());
+        doReturn(eventsPage).when(eventService).getTimeline(eq(TICKET_ID), any());
 
         mockMvc.perform(get("/api/v1/tickets/{id}/events", TICKET_ID)
-                        .param("page", "0")
-                        .param("size", "10"))
+                        .with(user(adminDetails)))
                 .andExpectAll(
                         status().isOk(),
-                        jsonPath("$.content").value(Matchers.hasSize(1)),
-                        jsonPath("$.content[0].id").value(10L),
-                        jsonPath("$.content[0].eventType").value("CREATED")
+                        jsonPath("$.content").isArray(),
+                        jsonPath("$.content.length()").value(1),
+                        jsonPath("$.metadata.totalElements").value(1)
                 );
-
-        verify(eventService).getTimeline(eq(TICKET_ID), any(Pageable.class));
     }
 
     @Test
-    void shouldCreateTicket() throws Exception {
-        CreateTicketRequest request = new CreateTicketRequest(
-                "Cannot log in",
-                "Getting error when logging in with Google",
-                CUSTOMER_ID
-        );
-        doReturn(ticketResponse()).when(ticketService).create(any(CreateTicketRequest.class));
+    void shouldReturnEmptyPageWhenTicketHasNoEvents() throws Exception {
+        PageImpl<Object> emptyPage = new PageImpl<>(Collections.emptyList(), PageRequest.of(0, 20), 0);
+
+        doReturn(Optional.of(mock(TicketResponse.class))).when(ticketService).findById(eq(TICKET_ID), any());
+        doReturn(emptyPage).when(eventService).getTimeline(eq(TICKET_ID), any());
+
+        mockMvc.perform(get("/api/v1/tickets/{id}/events", TICKET_ID)
+                        .with(user(adminDetails)))
+                .andExpectAll(
+                        status().isOk(),
+                        jsonPath("$.content").isEmpty(),
+                        jsonPath("$.metadata.totalElements").value(0)
+                );
+    }
+
+    @Test
+    void shouldReturnNotFoundWhenTryingToGetTimelineOfNonExistingTicket() throws Exception {
+        doReturn(Optional.empty()).when(ticketService).findById(eq(TICKET_ID), any());
+
+        mockMvc.perform(get("/api/v1/tickets/{id}/events", TICKET_ID)
+                        .with(user(adminDetails)))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void shouldCreateTicketAndReturnLocationHeaderWhenRequestIsValid() throws Exception {
+        CreateTicketRequest request = new CreateTicketRequest("Cannot login", "Getting error");
+        TicketResponse createdTicket = mockTicketResponse(TICKET_ID);
+
+        doReturn(createdTicket).when(ticketService).create(any(), eq(ADMIN_ID));
 
         mockMvc.perform(post("/api/v1/tickets")
+                        .with(user(adminDetails))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpectAll(
                         status().isCreated(),
-                        jsonPath("$.id").value(TICKET_ID),
-                        jsonPath("$.title").value("Cannot log in")
+                        header().string("Location", "/api/v1/tickets/" + TICKET_ID),
+                        jsonPath("$.id").value(TICKET_ID)
                 );
-
-        verify(ticketService).create(any(CreateTicketRequest.class));
     }
 
     @Test
-    void shouldReturnBadRequestWhenCreateTicketIsInvalid() throws Exception {
-        CreateTicketRequest invalidRequest = new CreateTicketRequest(StringUtils.EMPTY, StringUtils.EMPTY, null);
+    void shouldReturnBadRequestWhenCreateTicketRequestIsInvalid() throws Exception {
+        CreateTicketRequest invalidRequest = new CreateTicketRequest(null, null);
 
         mockMvc.perform(post("/api/v1/tickets")
+                        .with(user(customerDetails))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(invalidRequest)))
-                .andExpectAll(
-                        status().isBadRequest()
-                );
+                .andExpect(status().isBadRequest());
 
-        verify(ticketService, never()).create(any(CreateTicketRequest.class));
+        verifyNoInteractions(ticketService);
     }
 
     @Test
-    void shouldAssignTicket() throws Exception {
-        AssignTicketRequest request = new AssignTicketRequest(ADMIN_ID, AGENT_ID);
+    void shouldAssignTicketAndReturnUpdatedTicketWhenRequestIsValid() throws Exception {
+        AssignTicketRequest request = new AssignTicketRequest(AGENT_ID);
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
 
-        doReturn(ticketResponse()).when(ticketService).assign(TICKET_ID, ADMIN_ID, AGENT_ID);
+        doReturn(updatedTicket).when(ticketService).assign(eq(TICKET_ID), eq(ADMIN_ID), eq(AGENT_ID));
 
         mockMvc.perform(patch("/api/v1/tickets/{id}/assign", TICKET_ID)
+                        .with(user(adminDetails))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpectAll(
                         status().isOk(),
                         jsonPath("$.id").value(TICKET_ID)
                 );
-
-        verify(ticketService).assign(TICKET_ID, ADMIN_ID, AGENT_ID);
     }
 
     @Test
-    void shouldReturnBadRequestWhenAssignTicketIsInvalid() throws Exception {
-        AssignTicketRequest invalidRequest = new AssignTicketRequest(null, null);
-
+    void shouldReturnBadRequestWhenAssigneeIdIsMissing() throws Exception {
         mockMvc.perform(patch("/api/v1/tickets/{id}/assign", TICKET_ID)
+                        .with(user(adminDetails))
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidRequest)))
-                .andExpectAll(
-                        status().isBadRequest()
-                );
+                        .content("{}"))
+                .andExpect(status().isBadRequest());
 
-        verify(ticketService, never()).assign(any(), any(), any());
+        verifyNoInteractions(ticketService);
     }
 
     @Test
-    void shouldReturnUnprocessableContentWhenResolvingNewTicket() throws Exception {
-        ActorCommand request = new ActorCommand(AGENT_ID);
+    void shouldStartProgressAndReturnUpdatedTicketWhenActorIsAgent() throws Exception {
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
 
-        doThrow(new InvalidStatusTransitionException(TicketStatus.NEW, TicketStatus.RESOLVED))
-                .when(ticketService).resolve(TICKET_ID, AGENT_ID);
+        doReturn(updatedTicket).when(ticketService).startProgress(eq(TICKET_ID), eq(AGENT_ID));
+
+        mockMvc.perform(patch("/api/v1/tickets/{id}/start", TICKET_ID)
+                        .with(user(agentDetails)))
+                .andExpectAll(
+                        status().isOk(),
+                        jsonPath("$.id").value(TICKET_ID)
+                );
+    }
+
+    @Test
+    void shouldRequestCustomerInfoAndReturnUpdatedTicketWhenActorIsAgent() throws Exception {
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
+
+        doReturn(updatedTicket).when(ticketService).requestCustomerInfo(eq(TICKET_ID), eq(AGENT_ID));
+
+        mockMvc.perform(patch("/api/v1/tickets/{id}/request-info", TICKET_ID)
+                        .with(user(agentDetails)))
+                .andExpectAll(
+                        status().isOk(),
+                        jsonPath("$.id").value(TICKET_ID)
+                );
+    }
+
+    @Test
+    void shouldResolveTicketAndReturnUpdatedTicketWhenActorIsAgent() throws Exception {
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
+
+        doReturn(updatedTicket).when(ticketService).resolve(eq(TICKET_ID), eq(AGENT_ID));
 
         mockMvc.perform(patch("/api/v1/tickets/{id}/resolve", TICKET_ID)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                        .with(user(agentDetails)))
                 .andExpectAll(
-                        status().isUnprocessableContent(),
-                        jsonPath("$.message").value(
-                                new InvalidStatusTransitionException(TicketStatus.NEW, TicketStatus.RESOLVED).getMessage()
-                        )
+                        status().isOk(),
+                        jsonPath("$.id").value(TICKET_ID)
                 );
-
-        verify(ticketService).resolve(TICKET_ID, AGENT_ID);
     }
 
     @Test
-    void shouldReturnForbiddenWhenClosingTicketAsAgent() throws Exception {
-        ActorCommand request = new ActorCommand(AGENT_ID);
+    void shouldCloseTicketAndReturnUpdatedTicketWhenActorIsCustomer() throws Exception {
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
 
-        doThrow(new TicketFlowAccessDeniedException("Only customers can manually close tickets"))
-                .when(ticketService).closeByCustomer(TICKET_ID, AGENT_ID);
+        doReturn(updatedTicket).when(ticketService).closeByCustomer(eq(TICKET_ID), eq(CUSTOMER_ID));
 
         mockMvc.perform(patch("/api/v1/tickets/{id}/close", TICKET_ID)
+                        .with(user(customerDetails)))
+                .andExpectAll(
+                        status().isOk(),
+                        jsonPath("$.id").value(TICKET_ID)
+                );
+    }
+
+    @Test
+    void shouldChangePriorityAndReturnUpdatedTicketWhenRequestIsValid() throws Exception {
+        ChangePriorityRequest request = new ChangePriorityRequest(TicketPriority.HIGH);
+        TicketResponse updatedTicket = mockTicketResponse(TICKET_ID);
+
+        doReturn(updatedTicket).when(ticketService).changePriority(eq(TICKET_ID), eq(AGENT_ID), eq(TicketPriority.HIGH));
+
+        mockMvc.perform(patch("/api/v1/tickets/{id}/priority", TICKET_ID)
+                        .with(user(agentDetails))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpectAll(
-                        status().isForbidden(),
-                        jsonPath("$.message").value("Only customers can manually close tickets")
+                        status().isOk(),
+                        jsonPath("$.id").value(TICKET_ID)
                 );
-
-        verify(ticketService).closeByCustomer(TICKET_ID, AGENT_ID);
     }
 
-    private TicketResponse ticketResponse() {
-        return new TicketResponse(
-                TICKET_ID,
-                "Cannot log in",
-                "Getting error when logging in with Google",
-                TicketStatus.IN_PROGRESS,
-                TicketPriority.HIGH,
-                userSummary(CUSTOMER_ID, "Clark Kent"),
-                userSummary(AGENT_ID, "Bruce Wayne"),
-                Instant.parse("2026-03-17T10:00:00Z"),
-                Instant.parse("2026-03-17T11:30:00Z"),
-                null
-        );
+    @Test
+    void shouldReturnBadRequestWhenPriorityIsMissing() throws Exception {
+        mockMvc.perform(patch("/api/v1/tickets/{id}/priority", TICKET_ID)
+                        .with(user(agentDetails))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{}"))
+                .andExpect(status().isBadRequest());
+
+        verifyNoInteractions(ticketService);
     }
 
-    private UserSummary userSummary(Integer id, String fullName) {
-        return new UserSummary(id, fullName);
+    private TicketFlowUserDetails mockUserDetails(Integer id, Role role) {
+        UserEntity user = UserEntity.builder()
+                .id(id)
+                .email(role.name().toLowerCase() + "@test.com")
+                .role(role)
+                .build();
+        return new TicketFlowUserDetails(user);
     }
 
-    private TicketEventResponse ticketEventResponse() {
-        return new TicketEventResponse(
-                10L,
-                userSummary(CUSTOMER_ID, "Clark Kent"),
-                TicketEventType.CREATED,
-                Map.of("ticketId", TICKET_ID, "createdById", CUSTOMER_ID),
-                Instant.parse("2026-03-17T10:00:00Z")
+    private TicketResponse mockTicketResponse(Long id) {
+        return mock(TicketResponse.class, invocation ->
+                invocation.getMethod().getName().equals("id") ? id : null
         );
     }
 }
-
-
-
